[project]
name = "advent-of-code-2025"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Jaime Liew", email = "jaimeliew1@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
advent-of-code-2025 = "advent_of_code_2025:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
